# BetterBarCrawlApp

./: .env.example  .gitignore  Dockerfile  README.md  Requirements.md  Requirements_Specifications.md  docker-compose.yaml
.github/workflows/: backend.yml  frontend.yml
Documents/: Requirements.md
Documents/WeeklyReports/: ReportTemplate.md  Week12_4.md  Week13.md  Week15.md  Week2.md  Week3.md  Week4.md  Week6.md  Week7.md
WeeklyReports/: Week1.md  Week2.md
src/backend/: .env.example  .nvim.lua  Dockerfile.old  docker-compose.yaml  openapi-generated.yaml  openapi-schema.yml  openapi.yaml  pyproject.toml  response.json  test-fixture.json
src/backend/api/: models.py  serializers.py  views.py
src/backend/api/migrations/: 0001_initial.py  0002_alter_location_address.py
src/backend/bbc/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/djangorestors/: settings.py  urls.py  views.py
src/backend/posting/: login.posting.yaml  logout.posting.yaml  registration.posting.yaml
src/backend/posting-openapi/: README.md
src/backend/posting-openapi/api/: optimize.posting.yaml  search.posting.yaml  user.posting.yaml
src/backend/posting-openapi/api/auth/: login.posting.yaml  logout.posting.yaml  logoutall.posting.yaml
src/backend/tests/: test_api_endpoints.py  test_users.py
src/frontend/: .env.example  README.md  pubspec.yaml
src/frontend/android/: build.gradle
src/frontend/android/app/: build.gradle
src/frontend/coverage/: lcov.info
src/frontend/ios/Runner/: Info.plist
src/frontend/lib/: config.dart  main.dart
src/frontend/lib/models/: location.dart  saved_locations.dart  search_params.dart  user.dart  (+2 more)
src/frontend/test/: main_test.dart  widget_test.dart
(+14 files in other folders)
