[tool.poetry]
name = "bbc-backend"
version = "0.2.0"
description = "Better Bar Crawl app backend API"
authors = ["GregShiner <greg@justifinetwork.com>"]
readme = "../../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
djangorestframework = "^3.15.2"
openrouteservice = "^2.3.3"
psycopg2-binary = "^2.9.9"
django-rest-knox = "^5.0.2"
python-dotenv = "^1.0.1"
googlemaps = "^4.10.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
Markdown = "^3.7"
mypy = "^1.11.2"
inflection = "^0.5.1"
uritemplate = "^4.1.1"
pyyaml = "^6.0.2"
ruff = "^0.7.4"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1.1"}
djangorestframework-types = "^0.9.0"
django-request-logging = "^0.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "data/"
line-length = 120

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = ["data/"]

[tool.django-stubs]
django_settings_module = "bbc.settings"

[tool.ruff]
exclude = ["data/"]
